<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
  >

            <include layout="@layout/nav_header_main" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:text="@string/language"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/lang"
                    android:gravity="center_vertical"
                    android:textAlignment="textStart"
                    android:paddingLeft="10dp"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/spinner"
                    android:spinnerMode="dropdown" />



            </LinearLayout>





            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:weightSum="1">

                <TextView
                    android:text="@string/evaluate"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:id="@+id/like"
                    android:gravity="center_vertical"
                    android:textAlignment="textStart"
                    android:paddingLeft="10dp"/>

                <ImageButton
                    android:text="-"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/button_like"
                    android:background="@drawable/star52"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="6dp"

                    android:layout_weight="0.05" />
                <ImageButton
                    android:text="-"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/button_like2"
                    android:background="@drawable/star52"
                    android:layout_gravity="center_vertical"
                    />
                <ImageButton
                    android:text="-"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/button_like3"
                    android:background="@drawable/star52"
                    android:layout_gravity="center_vertical"
                    />
                <ImageButton
                    android:text="-"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/button_like4"
                    android:background="@drawable/star52"
                    android:layout_gravity="center_vertical"
                    />
                <ImageButton
                    android:text="-"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/button_like5"
                    android:background="@drawable/star52"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="1">

            <TextView
                android:text="@string/other"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="19dp"
                android:layout_height="match_parent"
                android:id="@+id/other"
                android:gravity="center_vertical"

                android:paddingLeft="10dp"/>




            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:weightSum="1">

                <TextView
                    android:text="@string/emusic"
                    android:layout_width="100dp"


                    android:layout_height="match_parent"
                    android:id="@+id/emusict"
                    android:gravity="center_vertical"

                    android:paddingLeft="10dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <ImageButton
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:id="@+id/emusic"
                    android:background="@drawable/emusic"
                    android:layout_gravity="center_vertical"
                    />



            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:weightSum="1">

                <TextView
                    android:text="@string/emotions"
                    android:layout_width="100dp"


                    android:layout_height="match_parent"
                    android:id="@+id/emotions"
                    android:gravity="center_vertical"

                    android:paddingLeft="10dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <ImageButton
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:id="@+id/emotion"
                    android:background="@drawable/emotions"
                    android:layout_gravity="center_vertical"
                    />



            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:weightSum="1">

                <TextView
                    android:text="@string/partygames"
                    android:layout_width="100dp"


                    android:layout_height="match_parent"
                    android:id="@+id/partygamest"
                    android:gravity="center_vertical"

                    android:paddingLeft="10dp"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <ImageButton
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:id="@+id/partygames"
                    android:background="@drawable/partygames"
                    android:layout_gravity="center_vertical"
                    />



            </LinearLayout>



        </LinearLayout>


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
